--- a/index.html
+++ b/index.html
@@ -18,10 +18,26 @@
                 </div>
                 <div class="header__gnb">
                     <ul class="nav">
-                        <li><a href="#">퍼블리싱</a></li>
-                        <li><a href="#">프론트엔드</a></li>
+                        <li><a href="#">퍼블리싱</a>
+                            <ul>
+                                <li><a href="#">HTML</a></li>
+                                <li><a href="#">CSS & SASS</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">스크립트</a></li>
-                        <li><a href="#">웹접근성</a></li>
+                        <li><a href="#">프론트엔드</a>
+                            <ul>
+                                <li><a href="#">React</a></li>
+                                <li><a href="#">Vue</a></li>
+                            </ul>                        
+                        </li>
+                        <li><a href="#">웹접근성</a>
+                            <ul>
+                                <li><a href="#">주의사항</a></li>
+                                <li><a href="#">심사기준</a></li>
+                            </ul>                         
+                        </li>
+                        <li><a href="#">블로그</a></li>
                     </ul>
                 </div>
             </div>
