--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                                 <li><a href="#">CSS & SASS</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">스크립트</a></li>
-                        <li><a href="#">프론트엔드</a>
+                        <li><a href="#">JAVASCRIPT</a></li>
+                        <li><a href="#">FRONTEND</a></li>
                             <ul>
                                 <li><a href="#">React</a></li>
                                 <li><a href="#">Vue</a></li>
