--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
             <!-- 비주얼 -->
             <div class="main__content">
                 <section class="section01">
-                
+                        <ul>
+				<li><a href="#">HTML</a></li>    
+				<li><a href="#">CSS</a></li>    
+				<li><a href="#">Javascript</a></li>  
+			</ul>
                 </section>
                 <section class="section02">
                 
