--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 </section>                                              
             </div>
             <div class="footer">
-            
+		    <h3>봄이 오나</h3>
+		    <p>Mailto Gmail: sunghoo78@</p>
             </div>
         </div>
     </body>
