--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/> 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/common.css">
-        <script src="js/script.js"></script>       
+        <link rel="stylesheet" type="text/css" href="css/common.css">            
         <title>봄이 오나</title>
     </head>
     <body>
@@ -49,7 +48,7 @@
             </div>
             <!-- //heder -->
             <div class="main__visual">
-            
+            <img src="./img/main01.jpg" alt="">
             </div> 
             <!-- 비주얼 -->
             <div class="main__content">
@@ -116,5 +115,7 @@
 		    <p>Mailto Gmail: sunghoo78@</p>
             </div>
         </div>
+
+        <script src="js/script.js"></script>   
     </body>
 </html>
