슬라이드 구현중

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/> 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/common.css">            
+        <link rel="stylesheet" type="text/css" href="css/style.css">            
         <title>봄이 오나</title>
     </head>
     <body>
@@ -30,7 +30,7 @@
                             </ul>
                         </li>
                         <li><a href="#">JAVASCRIPT</a></li>
-                        <li><a href="#">FRONTEND</a></li>
+                        <li><a href="#">FRONTEND</a>
                             <ul>
                                 <li><a href="#">React</a></li>
                                 <li><a href="#">Vue</a></li>
@@ -46,9 +46,49 @@
                     </ul>
                 </div>
             </div>
-            <!-- //heder -->
+            <!-- //heder -->            
             <div class="main__visual">
-            <img src="./img/main01.jpg" alt="">
+               <div class="slider__container">
+                    <button type="button" class="btn__slider--prev">이전</button>
+                    <button type="button" class="btn__slider--next">다음</button>                  
+                    <ul class="main__visual--slider" >
+                        <li class="slider">
+                            <div class="slider__inner--text">
+                                <p>웹은 진화한다</p>
+                                <p>봄이 오나</p>
+                            </div>
+                            <img src="./img/main01.jpg" alt="">
+                        </li>
+                        <li class="slider">
+                            <div class="slider__inner--text">
+                                <p>HTML 마크업 컨벤션</p>
+                                <p>봄이 오나</p>
+                            </div>
+                            <img src="./img/main02.jpg" alt="">
+                        </li>
+                        <li class="slider">
+                            <div class="slider__inner--text">
+                                <p>CSS 네이밍 방법론</p>
+                                <p>봄이 오나</p>
+                            </div>
+                            <img src="./img/main03.jpg" alt="">
+                        </li>
+                        <li class="slider" >
+                            <div class="slider__inner--text">
+                                <p>세상은 바닐라로 통한다</p>
+                                <p>봄이 오나</p>
+                            </div>
+                            <img src="./img/main03.jpg" alt="">
+                        </li>    
+                        <li class="slider">
+                            <div class="slider__inner--text">
+                                <p>React & Vue</p>
+                                <p>봄이 오나</p>
+                            </div>
+                            <img src="./img/main04.jpg" alt="">
+                        </li>                                                                              
+                    </ul>
+               </div>
             </div> 
             <!-- 비주얼 -->
             <div class="main__content">
