--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                     <ul class="photo__list">
                         <li>
                             <div class="photo__box">
+                                <div class="photo__mask"></div>
                                 <img src="./img/sect04_img1.jpg" alt="">
                             </div>
                         </li>
