--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <ul class="main__visual--slider" >
                         <li class="slider">
                             <div class="slider__inner--text">
-                                <p>웹은 진화한다</p>
+                                <p>No Plugin! Only Javascript</p>
                                 <p>봄이 오나</p>
                             </div>
                             <img src="./img/main01.jpg" alt="">
@@ -158,5 +158,6 @@
         </div>
 
         <script src="js/script.js"></script>   
+        <script src="slider.js"></script> 
     </body>
 </html>
