--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                <div class="slider__container">
                     <button type="button" class="btn__slider--prev">이전</button>
                     <button type="button" class="btn__slider--next">다음</button>                  
-                    <ul class="main__visual--slider" >
+                    <ul class="main__visual--slider">
                         <li class="slider">
                             <div class="slider__inner--text">
                                 <p>No Plugin! Only Javascript</p>
@@ -157,6 +157,6 @@
             </div>
         </div>
         <script src="js/script.js"></script>   
-        <script src="slider.js"></script> 
+        <script src="js/slider.js"></script> 
     </body>
 </html>
