--- a/index.html
+++ b/index.html
@@ -48,46 +48,47 @@
             </div>
             <!-- //heder -->            
             <div class="main__visual">
-               <div class="slider__container">
+               <div class="slider__container" id="mainslider">
                     <button type="button" class="btn__slider--prev">이전</button>
                     <button type="button" class="btn__slider--next">다음</button>                  
                     <ul class="main__visual--slider">
                         <li class="slider">
                             <div class="slider__inner--text">
-                                <p>No Plugin! Only Javascript</p>
+                                <h2>No Plugin! Only Javascript</h2>
                                 <p>봄이 오나</p>
                             </div>
                             <img src="./img/main01.jpg" alt="">
                         </li>
                         <li class="slider">
                             <div class="slider__inner--text">
-                                <p>HTML 마크업 컨벤션</p>
+                                <h2>HTML 마크업 컨벤션</h2>
                                 <p>봄이 오나</p>
                             </div>
                             <img src="./img/main02.jpg" alt="">
                         </li>
                         <li class="slider">
                             <div class="slider__inner--text">
-                                <p>CSS 네이밍 방법론</p>
+                                <h2>CSS 네이밍 방법론</h2>
                                 <p>봄이 오나</p>
                             </div>
                             <img src="./img/main03.jpg" alt="">
                         </li>
                         <li class="slider" >
                             <div class="slider__inner--text">
-                                <p>세상은 바닐라로 통한다</p>
-                                <p>봄이 오나</p>
-                            </div>
-                            <img src="./img/main03.jpg" alt="">
-                        </li>    
-                        <li class="slider">
-                            <div class="slider__inner--text">
-                                <p>React & Vue</p>
+                                <h2>세상은 바닐라로 통한다</h2>
                                 <p>봄이 오나</p>
                             </div>
                             <img src="./img/main04.jpg" alt="">
+                        </li>    
+                        <li class="slider">
+                            <div class="slider__inner--text">
+                                <h2>React & Vue</h2>
+                                <p>봄이 오나</p>
+                            </div>
+                            <img src="./img/main05.jpg" alt="">
                         </li>                                                                              
                     </ul>
+                    <div class="pagenation"></div>
                </div>
             </div> 
             <!-- 비주얼 -->
