--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                     </button>
                     <ul class="nav">
                         <li><a href="#">퍼블리싱</a>
-                            <ul>
+                            <ul class="navTwo">
                                 <li><a href="#">HTML</a></li>
                                 <li><a href="#">CSS & SASS</a></li>
                             </ul>
                         </li>
                         <li><a href="#">JAVASCRIPT</a></li>
                         <li><a href="#">FRONTEND</a>
-                            <ul>
+                            <ul class="navTwo">
                                 <li><a href="#">React</a></li>
                                 <li><a href="#">Vue</a></li>
                             </ul>                        
                         </li>
                         <li><a href="#">웹접근성</a>
-                            <ul>
+                            <ul class="navTwo">
                                 <li><a href="#">주의사항</a></li>
                                 <li><a href="#">심사기준</a></li>
                             </ul>                         
@@ -45,6 +45,7 @@
                         <li><a href="#">블로그</a></li>
                     </ul>
                 </div>
+                <div class="dim"></div>
             </div>
             <!-- //heder -->            
             <div class="main__visual">
