--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <section class="section02">
                     <div class="section__innerbox">
                         <div class="movie">
-                            <video controls>
+                            <video  autoplay muted playsinline loop id="myvideo">
                                 <source src="img/laptop.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -118,21 +118,8 @@
                         <p>자바스크립트 인터렉션</p>
                     </div>
                 </section>
+
                 <section class="section04">
-                    <div class="section__innerbox">
-                        <div class="mainpage__img--sleft">
-                            <img src="./img/sect03.jpg" alt="">
-                        </div>
-                        <div class="maintext__text--right">
-                            I am not afraid of storms for<br>
-                            I am learning how to sail my ship.<br>                            
-                            나는 폭풍이 두렵지 않다.<br>                            
-                            나는 배로 항해 하는 법을 배우고 있으니까.<br>                            
-                            <span>-Helen keller 헬렌켈러-</span>
-                        </div>
-                    </div>                
-                </section>  
-                <section class="section05">
                     <ul class="photo__list">
                         <li>
                             <div class="photo__box">
