--- a/index3.html
+++ b/index3.html
@@ -94,38 +94,23 @@
             </div> 
             <!-- 비주얼 -->
             <div class="main__content">
-                <style>
-                    .section01 {padding:100px 0;}
-                    .main__content .biz__list li a {line-height:200px;}
-                </style>
-                <section class="section01">
+                 <section class="section01">
                         <ul class="biz__list">
                             <li><a href="#">HTML</a></li>    
                             <li><a href="#">CSS</a></li>    
                             <li><a href="#">Javascript</a></li>  
                         </ul>
                 </section>
-                <style>
-                    .section02 {padding:100px 0;text-align:center;}
-                    .section02 video {}   
-                    .movie.bottom__play {
-                        position:absolute;
-                        right:0;
-                        bottom:0;
-                        width:350px;
-                        height:300px;
-                        z-index:15;
-                    }               
-                </style>                
+              
                 <section class="section02">
                     <div class="section__innerbox">
                         <div class="movie">
-                            <video controls id="myvideo">
+                            <video autoplay muted playsinline loop id="myvideo">
                                 <source src="img/laptop.mp4" type="video/mp4">
                             </video>
                         </div>
                     </div>
-                </section>
+                </section>              
                 <section class="section03">
                     <div class="section__innerbox">
                         <p>보는 재미가 있는</p>
@@ -134,21 +119,10 @@
                         <p>자바스크립트 인터렉션</p>
                     </div>
                 </section>
+                <style>
+
+                </style>
                 <section class="section04">
-                    <div class="section__innerbox">
-                        <div class="mainpage__img--sleft">
-                            <img src="./img/sect03.jpg" alt="">
-                        </div>
-                        <div class="maintext__text--right">
-                            I am not afraid of storms for<br>
-                            I am learning how to sail my ship.<br>                            
-                            나는 폭풍이 두렵지 않다.<br>                            
-                            나는 배로 항해 하는 법을 배우고 있으니까.<br>                            
-                            <span>-Helen keller 헬렌켈러-</span>
-                        </div>
-                    </div>                
-                </section>  
-                <section class="section05">
                     <ul class="photo__list">
                         <li>
                             <div class="photo__box">
