--- a/index.html
+++ b/index.html
@@ -25,24 +25,23 @@
                     <ul class="nav">
                         <li><a href="#">퍼블리싱</a>
                             <ul class="navTwo">
-                                <li><a href="#">HTML</a></li>
-                                <li><a href="#">CSS & SASS</a></li>
+                                <li><a href="about_html.html">마크업 컨벤션</a></li>
+                                <li><a href="about_css.html">css 방법론 </a></li>
                             </ul>
                         </li>
-                        <li><a href="#">JAVASCRIPT</a></li>
+                        <li><a href="js.html">JAVASCRIPT</a></li>
                         <li><a href="#">FRONTEND</a>
                             <ul class="navTwo">
-                                <li><a href="#">React</a></li>
+                                <li><a href="react.html">React</a></li>
                                 <li><a href="#">Vue</a></li>
                             </ul>                        
                         </li>
                         <li><a href="#">웹접근성</a>
                             <ul class="navTwo">
-                                <li><a href="#">주의사항</a></li>
-                                <li><a href="#">심사기준</a></li>
+                                <li><a href="wa.html">주의사항</a></li>                                
                             </ul>                         
                         </li>
-                        <li><a href="#">블로그</a></li>
+                        <li><a href="https://velog.io/@honghao" target="_blank">블로그</a></li>
                     </ul>
                 </div>
                 <div class="dim"></div>
