--- a/about_html.html
+++ b/about_html.html
@@ -56,7 +56,7 @@
                         <h3>HTML 속성선언순서</h3>
                         <div class="cont">
                             <table class="table table__list--header">
-                                <caption>HTML 속성선언순서</caption>
+                                <caption><span class="ir-text">HTML 속성선언순서</span></caption>
                                 <colgroup>
                                     <col style="width:20%;">
                                     <col>
@@ -133,7 +133,7 @@
                         <h3>CSS 속성선언순서</h3>
                         <div class="cont">
                             <table class="table table__list--header">
-                                <caption>CSS 속성선언순서</caption>
+                                <caption><span class="ir-text">CSS 속성선언순서</span></caption>
                                 <colgroup>
                                     <col style="width:20%;">
                                     <col style="width:20%;">
@@ -240,7 +240,7 @@
 		    <p>Mailto Gmail: sunghoo78@</p>
             </div>
         </div>
-        <script src="js/script.js"></script>   
-        <script src="js/slider.js"></script> 
+        <script src="js/subscript.js"></script>   
+        
     </body>
 </html>
