--- a/about_css.html
+++ b/about_css.html
@@ -107,7 +107,6 @@
 		    <p>Mailto Gmail: sunghoo78@</p>
             </div>
         </div>
-        <script src="js/script.js"></script>   
-        <script src="js/slider.js"></script> 
+        <script src="js/subscript.js"></script>  
     </body>
 </html>
