--- a/wa.html
+++ b/wa.html
@@ -38,8 +38,7 @@
                         </li>
                         <li><a href="#">웹접근성</a>
                             <ul class="navTwo">
-                                <li><a href="wa.html">주의사항</a></li>
-                                <li><a href="wa2.html">심사기준</a></li>
+                                <li><a href="wa.html">주의사항</a></li>                               
                             </ul>                         
                         </li>
                         <li><a href="https://velog.io/@honghao" target="_blank">블로그</a></li>
@@ -161,7 +160,6 @@
 		    <p>Mailto Gmail: sunghoo78@</p>
             </div>
         </div>
-        <script src="js/script.js"></script>   
-        <script src="js/slider.js"></script> 
+        <script src="js/subscript.js"></script>  
     </body>
 </html>
